# idmlatentspace

./: .env  .env.example  .gitignore  GUI_README.md  README.md  apa.py  audio_ml_analysis.json  audio_ml_analyzer.py  cc_automation_report.txt  clips_analysis.csv  config.yaml  data_processor.py  debugals_separatebass.py  deploy_templates.sh  extracted_notes.csv  gui.py  idm_latent_space.db  main.py  ml_descriptors.csv  model.py  organize_files.sh  osiris_all_presets.syx  osiris_preset.syx  osiris_preset.txt  package_creator_script.sh  pipeline.py  preset_differential_analyzer.py  project_analysis.json  project_report.txt  quickstart.sh  requirments.txt~  run.sh  start.sh  start_backend_simple.sh  start_simple.sh  startnew.sh  synthesizer_research_data.json  synthesizers_analysis.csv  sysex_toolkit.py  track_analysis.json  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
AbletonProjects/: A2ML1.als  example.mid
Backup/: A2ML1 [2025-07-20 180737].als  A2ML1 [2025-07-20 181333].als  A2ML1 [2025-07-20 181601].als  A2ML1 [2025-07-20 181821].als
Samples/Recorded/: 3-Audio 0001 [2025-07-20 175512].wav.asd  3-Audio 0002 [2025-07-20 180751].wav.asd  3-Audio 0003 [2025-07-20 180756].wav.asd  (+1 more)
app/: __init__.py  main.py
app/core/: config.py  database.py  (+1 more)
debug/: debugals.py
sysex-toolkit/: .gitignore  =5.4.0  LICENSE  MANIFEST.in  README.md  build.sh  install.sh  pyproject.toml  setup.py
sysex-toolkit/sysex_toolkit/: __init__.py  analyzer.py  batch.py  cli.py  core.py  utils.py
sysex-toolkit/tests/: test_basic.py
tools/: package_files.py
(+41 files in other folders)
